# deetlist

./: .gitignore  README.md  pyproject.toml
deetlist/: __init__.py
deetlist/page_scrapers/: all_dragons.py  all_heroic_dragons.py  breedable_category_5_dragons.py  breedable_category_9_dragons.py  breedable_legendary_dragons.py  element_tokens.py  elements.py  events.py  fog_islands.py  heroic_dragons_categorized_by_attacks.py  heroic_races.py  home.py  new_dragons.py
