[tool.poetry]
name = "deetlist"
version = "0.1.0"
description = ""
authors = ["Marcuth <example@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.1"
httpx = "^0.26.0"
bs4 = "^0.0.2"
dragon-city-utils = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
